--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <p id="option2text">
                     menu
                 </p>
-                <img id="menuicon" src="images/menuimgblack.png" alt="">
+                <img id="menuicon" src="images/menuimgblack.webp" alt="">
             </div>
         </div>
     </div>
