--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Cuberto Partial Clone</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body data-scroll-container>
     <div id="navbar">
         <div id="logo">
             <h1 id="logotext">
